--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -162,170 +162,172 @@
         </nav>
         <!-- CheckBox -->
         <div class="casa mt-4">
-            <div class="column">
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="gap: 133px; width: 100%;">CAUSADO POR ANIMAIS
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <!-- <div class="form-group"> -->
+                <div class="column">
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="gap: 133px; width: 100%;">CAUSADO POR ANIMAIS
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 101px;">COM MEIO DE TRANSPORTE
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESMORONAMENTO/ DESLIZAMENTO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">EMERGÊNCIA MÉDICA
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA DE ALTURA 2M
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 154px;">TENTATIVA DE SUICÍDIO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 69px;">QUEDA PRÓPRIA ALTURA
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">AFOGAMENTO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">AGRESSÃO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 108px;">ATROPELAMENTO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">COM MEIO DE TRANSPORTE
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <div class="column">
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 90px;">CHOQUE ELÉTRICO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESABAMENTO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">DOMÉSTICO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">ESPORTIVO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">INTOXICAÇÃO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA BICICLETA
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA MOTO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 115px;">QUEDA NÍVEL 2M
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRABALHO
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block px-3">
+                        <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRANSFERÊNCIA
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESMORONAMENTO/ DESLIZAMENTO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">EMERGÊNCIA MÉDICA
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA DE ALTURA 2M
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 154px;">TENTATIVA DE SUICÍDIO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 69px;">QUEDA PRÓPRIA ALTURA
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AFOGAMENTO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AGRESSÃO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 108px;">ATROPELAMENTO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            
+            <!-- Caixa texto -->
+            <div class="esptext">
+                <div class="container-ultimo p-3">
+                    <div class="text-area">OUTRO
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
+                                style="height: 100%;"></textarea>
+                            <label for="floatingTextarea mt-3">Outro</label>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">CHOQUE ELÉTRICO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESABAMENTO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DOMÉSTICO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">ESPORTIVO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">INTOXICAÇÃO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA BICICLETA
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA MOTO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 115px;">QUEDA NÍVEL 2M
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRABALHO
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
-                </div>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRANSFERÊNCIA
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                    </div>
+            <!-- Botão Voltar e Proxima -->
+            <div class="espaço_botao">
+                <div class="botao">
+                    <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                    <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
                 </div>
             </div>
-        </div>
-        <!-- Caixa texto -->
-        <div class="esptext">
-            <div class="container-ultimo p-3">
-                <div class="text-area">OUTRO
-                    <div class="form-floating">
-                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
-                            style="height: 100%;"></textarea>
-                        <label for="floatingTextarea mt-3">Outro</label>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Botão Voltar e Proxima -->
-        <div class="espaço_botao">
-            <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
-            </div>
-        </div>
+        <!-- </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
