--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -37,88 +37,103 @@
         height: 100vh;
         font-family: 'Inter', sans-serif;
         color: white;
-    
+
     }
 
-    #nav{
+    #nav {
         background-color: #333333;
     }
-    .col-6{
+
+    .col-6 {
         background-color: #333333;
         width: 40%;
-    }
-    #row{
-        justify-content: space-around;
+        height: 13%;
     }
 
+    #row {
+        justify-content: space-around;
+    }
 </style>
+
 <body>
     <nav class="navbar navbar-dark" id="nav">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a> 
-          <p class="navbar-title mt-3 fw-bold">VITIMA ERA</p>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" 
-                  data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                  aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                  aria-labelledby="offcanvasDarkNavbarLabel">
-                  <div class="offcanvas-header">
-                      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                          aria-label="Close"></button>
-                  </div>
-                  <div class="offcanvas-body">
-                      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                          <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="#">CATEGORIAS</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="#">PERFIL</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="#">SAIR</a>
-                          </li>
-                  </div>
-              </div>
-          </div>
-      </nav>
-
-      <div class="container text-center">
-        <div class="row g-2 d-flex" id="row">
-            <div class="col-6">
-                <div class="p-3">CICLISTA</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">CONDUTOR CARRO</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">CONDUTOR MOTO</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">CLÍNICO</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">GESTANTE</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">TRAUMA</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">CLÍNICO</div>
-            </div>
-            <div class="col-6">
-                <div class="p-3">CLÍNICO</div>
+            <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
+            <p class="navbar-title mt-3 fw-bold">VITIMA ERA</p>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CATEGORIAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PERFIL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SAIR</a>
+                        </li>
+                </div>
             </div>
         </div>
-      </div>
+    </nav>
 
+    <div class="form-group h-100">
+        <div class="container h-100 justify-content-center d-flex align-items-center">
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+            <div class="row g-2 d-flex h-75" id="row">
+                <div class="col-6 d-flex p-4 justify-content-between">
+                    <span class="d-flex">CICLISTA </span>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">CONDUTOR CARRO</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">CONDUTOR MOTO</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">CLÍNICO</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">GESTANTE</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">TRAUMA</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">PASS. BAN FRENTE</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">PAS. BCO. TRÁS</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">PAS. MOTO</div>
+                </div>
+                <div class="col-6">
+                    <div class="p-4">PEDESTRE</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
