--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -172,7 +172,7 @@
                             </div>
                         </div>
 
-                        <div class="card col-9 mt-4" style="height: 210px;">
+                        <div class="card col-9 mt-4">
                             <div class="container d-flex gap-4 p-0">
 
                                 <label class="card-text mb-0 mt-3">FAZ USO DE MEDICAÇÃO</label>
@@ -205,7 +205,7 @@
                             </div>
                         </div>
 
-                        <div class="card col-9 mt-4">
+                        <div class="card col-9 mt-4" style="padding-bottom: 12px;">
                             <div class="container d-flex gap-4 p-0">
 
                                 <label class="card-text mb-0 mt-3">POSSUI ALGUM PROBLEMA DE SAÚDE?</label>
@@ -233,7 +233,7 @@
                             </div>
                         </div>
 
-                        <div class="card col-9 mt-4">
+                        <div class="card col-9 mt-4" style="padding-bottom: 12px;">
                             <div class="container d-flex gap-4 p-0">
 
                                 <label class="card-text mb-0 mt-3">sdfsdfsdfsdf?</label>
