--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -72,6 +72,21 @@
             border-color: rgb(6, 108, 243);
             box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
         }
+
+        /* Definindo estilos dos botões do rodapé */
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            justify-content: center;
+        }
+
+        .botao {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+        }
     </style>
 </head>
 
@@ -277,6 +292,15 @@
                 </div>
             </div>
         </form>
+
+        <!-- botoes do rodapé -->
+        <div class="espaço_botao">
+            <div class="botao">
+                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
