--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -72,7 +72,7 @@
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="nav-title mt-3 fw-bold">ANAMNESE DA EMERGÊNCIA MÉDICA</p>
+                <p class="nav-title mt-3 fw-bold">ANAMNESE GESTACIONAL</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -86,6 +86,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                             </li>
@@ -98,6 +99,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
+
                     </div>
         </nav>
 
