--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -307,14 +307,14 @@
                                     <input class="form-check-input" type="radio" name="anotherTimessexo"
                                         id="flexRadioDefault1">
                                     <label class="form-check-label card-text" for="flexRadioDefault1">
-                                        SIM
+                                        MASC
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimessexo"
                                         id="flexRadioDefault2" checked>
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
-                                        NÃO
+                                        FEM
                                     </label>
                                 </div>
                             </div>
