--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -37,7 +37,7 @@
         .base {
             width: 100vw;
             height: 100%;
-            display: flex;
+            margin-bottom: 20px;
             flex-direction: column;
         }
 
@@ -49,7 +49,7 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            height: 100vh;
+            height: 192vh;
             width: 100%;
             margin-bottom: 2%;
         }
@@ -58,17 +58,16 @@
             display: flex;
             flex-direction: column;
             width: 43%;
-            height: 100vh;
+            height: 196vh;
+            margin-top: -3px;
             box-sizing: border-box;
             padding: 12px;
             justify-content: space-between;
-            /* margin-bottom: 20px;
-            height: 100%; */
         }
 
         .block {
             background-color: #333333;
-            /* margin-bottom: 14px; */
+            margin-bottom: 14px; 
             height: 8%;
             display: flex;
             align-items: center;
@@ -82,7 +81,7 @@
             justify-content: space-between;
         }
 
-        
+
 
         .espaço_botao {
             display: flex;
@@ -152,7 +151,7 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">AGITAÇÃO 
+                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">AGITAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -166,7 +165,7 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRADICARDIA 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRADICARDIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -180,7 +179,7 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">CIANOSE 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">CIANOSE
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -208,7 +207,7 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -238,62 +237,62 @@
 
 
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
-                
+
             </div>
             <div class="column">
                 <div class="block px-3">
@@ -304,21 +303,21 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AMNÉSIA 
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AMNÉSIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">APINÉIA 
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">APINÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">BRADIPNÉIA 
+                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">BRADIPNÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -374,7 +373,7 @@
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HEMORRAGIA 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HEMORRAGIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
@@ -390,56 +389,56 @@
 
 
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
