--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -17,6 +17,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const checkboxes = document.querySelectorAll('.block input[type="checkbox"]');
+    
+                checkboxes.forEach(function (checkbox) {
+                    checkbox.addEventListener('change', function () {
+                        checkboxes.forEach(function (otherCheckbox) {
+                            if (otherCheckbox !== checkbox) {
+                                otherCheckbox.checked = false;
+                            }
+                        });
+                    });
+                });
+            });
+        </script>
+
     <style>
         body {
             margin: 0;
@@ -83,6 +99,7 @@
         }
 
         .esptext {
+            width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
