--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -130,7 +130,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimesnatal"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimescomplicacoes"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -178,7 +178,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimesfilho"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -221,7 +221,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimespressao"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimesbolsa"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -265,7 +265,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimesvisual"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -287,7 +287,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimesparto"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         NÃO
                                     </label>
@@ -312,7 +312,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="anotherTimessexo"
-                                        id="flexRadioDefault2" checked>
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label card-text" for="flexRadioDefault2">
                                         FEM
                                     </label>
