--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -126,7 +126,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
