--- a/pages/homeadm.html
+++ b/pages/homeadm.html
@@ -213,8 +213,62 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    CATEGORIAS
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">PERFIL</a>
@@ -222,6 +276,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -237,7 +292,7 @@
                 <div class="card-texto">
                     <div class="texto-block">
                         <div class="texto-titulo">Dashboard</div>
-                        <div class="texto-subtitulo">Visualizae estatísticas e dados</div>
+                        <div class="texto-subtitulo">Visualize estatísticas e dados</div>
                     </div>
                 </div>
                 <!-- <div class="card-imagem">
@@ -260,7 +315,7 @@
             </div>
             <div class="purplecard">
                 <div class="card-texto">
-                    <div class="texto-titulo-pb">Espaço do Adiministrador</div>
+                    <div class="texto-titulo-pb">Espaço do Administrador</div>
                 </div>
                 <!-- <div class="card-imagem">
                     <div class="align-imagem">
