--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=UTF-8>
     <!-- Linkagem -->
-    <title>Home-Adm</title>
+    <title>Home</title>
     <!-- Titulo -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
@@ -196,7 +196,7 @@
         <nav class="navbar navbar-dark fixed-top" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3 fw-bold">HOME ADM</p>
+                <p class="navbar-title mt-3 fw-bold">HOME</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -213,8 +213,62 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    CATEGORIAS
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">PERFIL</a>
@@ -222,6 +276,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">SAIR</a>
                             </li>
+                        </ul>
                     </div>
                 </div>
             </div>
